syntax = "proto3"; 

option csharp_namespace = "BlazorGrpcWebApp.Shared";
package UserUnitServiceGrpc; 

service UserUnitServiceGrpc { 
	rpc BuildUserUnit (GrpcUserUnitRequest) returns (GrpcUserUnitResponse) {}
} 

message GrpcUserUnitRequest{
	int32 userId = 1;
	int32 unitId = 2;
	int32 bananas = 3;
}

message GrpcUserUnitResponse {
	int32 unitId = 1;
	int32 userId = 2;
	int32 hitPoints = 3;
	bool success = 4;
	string message = 5;
}
